@@ -3,7 +3,7 @@
 
 # Otaku Repository
 
-This addon is a fork of the origianal Kaito addon made by SwagOtaku.
+This addon is a fork of the original Kaito addon made by SwagOtaku.
 
 All credit goes to SwagOtaku.
 
@@ -38,7 +38,7 @@ After each update, it is recommended that you clear cache/rebuild database to ma
 - Widgets: No information shows during the playback
 
 **_Optional_**: 
-- Embeds: A Setting Catagory to sort your embeds.
+- Embeds: A Setting catagory to sort your embeds.
 - Want to have a Set Viewtypes options for Menu View, Anime Viewm, Episode View
 
 ## Help needed with maintaining
